<?xml version="1.0"?>
<package>
    <name>driftcam_ros</name>
    <version>0.0.1</version>
    <description>The driftcam_ros package</description>

    <maintainer email="miquel.massot@gmail.com">Miquel Massot</maintainer>

    <license>BSD</license>
    <url type="website">http://wiki.ros.org/driftcam_ros</url>


    <author email="miquel.massot@gmail.com">Miquel Massot</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cola2_msgs</build_depend>
    <build_depend>std_srvs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cola2_msgs</run_depend>
    <run_depend>std_srvs</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
